jar packaging med maven-spring-boot-plugin. Dockerfile og dev-gcp.json og labs-gcp.json oppdatert mtp dette